user/themes/landed/css/custom.css
@font-face {
  font-family: "Less";
  font-weight: normal;
  src: url("../fonts/Less.otf");
}

@font-face {
  font-family: "Less";
  font-weight: 100;
  src: url("../fonts/Less-Light.otf");
}

@font-face {
  font-family: "Less";
  font-weight: bold;
  src: url("../fonts/Less-Bold.otf");
}

@font-face {
  font-family: 'Senda';
  font-weight: normal;
  src: url("../fonts/SendaDisplay_BECO.otf");
}

*, *:before, *:after {
  font-family: 'Roboto condensed', sans-serif !important;
  font-weight: 300;
}

#page-wrapper {
  /* padding: 15px !important; */
  padding: 0 !important;
  background: #FCFCFC;
}

@media screen and (max-width: 800px) {
  #page-wrapper {
    /* padding: 10px !important; */
  }
}

#header {
  display: block !important;
  background: transparent;
  box-shadow: none;
  border: none;
}

#logo {
  position: -webkit-sticky !important;
  position: sticky !important;
  bottom: -20px !important;
  margin-top: 32px !important;
  margin-left: 12px !important;
  z-index: 200;
}

#logo img {
  max-height: 80px;
  max-width: 80%;
}

#banner {
  background-position: center left !important;
  background-repeat: no-repeat;
  background-size: 70%;
  background-color: #000;
  box-shadow: none;
  transition: background-position 200ms ease-in, background-size 180ms ease-in 20ms;
}

body.nav #banner {
  background-position: -40vw -30vh !important;
  background-size: 100%;
}

body.nav #banner .content {
  display: none;
}

#banner .content {
  position: absolute;
  right: 0;
  bottom: 0;
  padding: 24px;
}

#banner .content h2 {
  font-size: 5em !important;
  font-family: Senda !important;
}

#banner .content p {
  font-family: Less !important;
  letter-spacing: 0.15em;
  font-weight: normal;
  margin: 0 !important;
}

@media screen and (max-width: 736px) {
  #banner {
    background-position: -5px -5px !important;
    background-size: 75vh;
  }

  #banner .content {
    position: absolute;
    bottom: 24px;
    left: 0;
    right: 0;
    padding: 0;
    max-width: 100%;
    margin: 0;
  }

  #banner .content h2 {
    font-size: 4em !important;
  }

  #banner .content p {
    display: none;
  }
}

#banner:after {
  opacity: 0;
}

@media screen and (max-width: 736px) {
  .image,
  .image img {
    border-radius: 0 !important;
  }
}

#banner .content {
  text-align: center;
}

#banner .content header h2 {
  font-size: 4em;
  text-transform: uppercase;
}

#banner .content header p {
  font-size: 1.5em;
}

#intro header {
  padding-bottom: 10vh;
  text-align: center;
}

.spotlight {
  box-shadow: none;
}

.spotlight h2 {
  text-transform: uppercase;
}

.spotlight.style1 .content {
  border-width: 0 !important;
}

.spotlight.right .content {
  width: 50vw;
}

.spotlight.left .content {
  width: 50vw;
}

.wrapper.style1 {
  background: #000;
}

#signup {
  background: #FFFFFF;
  color: #000;
}

#signup h2,
#signup header p,
#signup #email {
  color: #000;
}

#signup #email {
  border-color: #000;
}

#nav {
  position: fixed;
  width: 30vw;
  height: 0;
  top: 0;
  left: 70vw;
  bottom: 0;
  right: 0;
  z-index: 99;
  opacity: 0;
  display: none;
  background: #000;
  padding-left: 1em;
  overflow: auto;
}

#nav > ul {
  display: flex;
  flex-flow: column nowrap;
  width: 100%;
  min-height: 100%;
  justify-content: flex-start;
  align-items: flex-start;
  padding: 10vh 0 0 0;
}

@media all and (max-width: 800px) {
  #nav ul {
    align-content: flex-start;
  }

  #nav {
    width: 100vw;
    left: 0;
  }
}

#nav ul li {
  position: relative;
  text-align: left;
  font-size: 40pt;
  line-height: 80px;
  text-transform: uppercase;
  z-index: 1;
  margin: 0 !important;
  padding: 0 !important;
}

#nav ul li:after {
  content: '';
  display: block;
  position: absolute;
  top: 36px;
  border-radius: 2px;
  width: 0px;
  left: -200px;
  height: 2px;
  z-index: -1;
  background: #e44c65;
  transition: width 80ms ease-out;
}

#nav ul li:hover a,
#nav ul li:focus a,
#nav ul li a:hover,
#nav ul li a:focus {
  color: #ffffff !important;
}

#nav ul li:hover:after,
#nav ul li:focus:after {
  width: calc(60% + 200px);
}

#nav ul li .children-trigger {
  color: #e44c65;
  cursor: pointer;
}

#nav ul li .children-trigger + ul {
  display: none;
  position: relative;
  left: 0;
  padding-left: 0;
}

#nav ul li .children-trigger + ul li {
  margin-left: 0;
  width: 500px;
  text-align: left;
  font-size: 32px;
  line-height: 32px;
  max-width: calc(100vw - 2em);
}

#nav ul li .children-trigger.active + ul {
  display: block;
}

#nav ul li .children-trigger + ul li:after {
  top: 16px;
} 

#nav ul li .children-trigger + ul li:hover:after,
#nav ul li .children-trigger + ul li:focus:after {
  width: 60%;
}

@media all and (max-width: 800px) {
  #nav ul li .children-trigger.active + ul {
    left: 64px;
  }
}

.content img {
  max-width: 18em;
  max-height: 18em;
}

.keypoint img {
  max-width: 100%;
}

/* https://codepen.io/BeanBaag/pen/oexJzE */
/*  COLORS
========================================= */
/*  MIXINS
========================================= */
/*  RESET
========================================= */
*, *:before, *:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  background-color: #2c3e50;
}

/*  MENU ICON
========================================= */
.menu-icon {
  position: absolute;
  top: 45px;
  right: 0;
  -webkit-transform: translate(-50%, -50%) scale(0.6);
  -moz-transform: translate(-50%, -50%) scale(0.6);
  -ms-transform: translate(-50%, -50%) scale(0.6);
  -o-transform: translate(-50%, -50%) scale(0.6);
  transform: translate(-50%, -50%) scale(0.6);
  width: 50px;
  height: 50px;
  cursor: pointer;
  z-index: 300;
}

.menu-icon:hover,
.menu-icon:focus {
  -webkit-transform: translate(-50%, -50%) scale(0.7);
  -moz-transform: translate(-50%, -50%) scale(0.7);
  -ms-transform: translate(-50%, -50%) scale(0.7);
  -o-transform: translate(-50%, -50%) scale(0.7);
  transform: translate(-50%, -50%) scale(0.7);
}

.menu-icon .dot {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 10px;
  height: 10px;
  background-color: #ffffff;
  border-radius: 10px;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  -o-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  -webkit-transition: margin 200ms ease 200ms, width 200ms ease;
  -moz-transition: margin 200ms ease 200ms, width 200ms ease;
  -o-transition: margin 200ms ease 200ms, width 200ms ease;
  transition: margin 200ms ease 200ms, width 200ms ease;
}
.menu-icon .dot:nth-of-type(1) {
  margin-top: -20px;
  margin-left: -20px;
  -webkit-transform: translate(-50%, -50%) rotate(45deg);
  -moz-transform: translate(-50%, -50%) rotate(45deg);
  -ms-transform: translate(-50%, -50%) rotate(45deg);
  -o-transform: translate(-50%, -50%) rotate(45deg);
  transform: translate(-50%, -50%) rotate(45deg);
}
.menu-icon .dot:nth-of-type(2) {
  margin-top: -20px;
  -webkit-transform: translate(-50%, -50%) rotate(-45deg);
  -moz-transform: translate(-50%, -50%) rotate(-45deg);
  -ms-transform: translate(-50%, -50%) rotate(-45deg);
  -o-transform: translate(-50%, -50%) rotate(-45deg);
  transform: translate(-50%, -50%) rotate(-45deg);
}
.menu-icon .dot:nth-of-type(3) {
  margin-top: -20px;
  margin-left: 20px;
}
.menu-icon .dot:nth-of-type(4) {
  margin-left: -20px;
}
.menu-icon .dot:nth-of-type(6) {
  margin-left: 20px;
}
.menu-icon .dot:nth-of-type(7) {
  margin-top: 20px;
  margin-left: -20px;
}
.menu-icon .dot:nth-of-type(8) {
  margin-top: 20px;
}
.menu-icon .dot:nth-of-type(9) {
  margin-top: 20px;
  margin-left: 20px;
}
.menu-icon.clicked .dot {
  -webkit-transition: margin 200ms ease, width 200ms ease 200ms;
  -moz-transition: margin 200ms ease, width 200ms ease 200ms;
  -o-transition: margin 200ms ease, width 200ms ease 200ms;
  transition: margin 200ms ease, width 200ms ease 200ms;
  margin-left: 0;
  margin-top: 0;
}
.menu-icon.clicked .dot:nth-of-type(1) {
  width: 50px;
}
.menu-icon.clicked .dot:nth-of-type(2) {
  width: 50px;
}
.menu-icon.clicked + #nav {
  opacity: 1;
  display: block;
  height: 100vh;
}

